  * $STY expands to the session name.
  * Tilde-expansion in pathnames (e.g. for the 'source' command)
  * C-style escapes can be used (e.g. "\n" to get a newline with 'stuff')
  * '%p' in caption/hardstatus string expands to the PID of the backend, and
    '%+p' expands to the PID of the frontend (display).
  * '%S' in caption/hardstatus string expands to the session name.

  Window List:
  * Nested views when there are window groups (with 'windowlist -g').
  * Press 'm' to toggle the most-recent view.
  * Press 'g' to toggle nestedness.
  * Press 'a' to view all windows in the list.

  Others:
  * Start using 'ChangeLog' for logging changes again.
  * Terminfo update for 256-color support.
  * Multiple input history (partially from Romain Francoise).
  * vi-like fFtT;, searching in copy mode.
  * In copy mode, search in reverse direction when 'N' is pressed.
  * Tab-completion for command input.
  * Some more readline-like bindings in input mode (e.g. ^W, ^D, ^P, ^N etc.)
  * Fix displaying unicode characters in the caption/hardstatus on UTF8 locale.
  * A revamped displays list (for 'displays' command)

  In-Progress:
  * Scripting support (thanks to Google Summer of Code 2009 project by Rui Guo)

  Developers:
  * Juergen Weigert <jw@suse.de>
  * Michael Schroeder <mls@suse.de>
  * Micah Cowan <micah@cowan.name>
  * Sadrul Habib Chowdhury <sadrul@users.sourceforge.net>

  Contributors:
  * Dick <dick@mrns.nl>
  * Gabriel <g2p.code@gmail.com>
  * Benjamin Andresen <bandresen@gmail.com>
  * Maarten Billemont <lhunath@gmail.com>
  * Curtis Brown <mrbrown8@juno.com>
  * Cyril Brulebois <kibi@debian.org>
  * Trent W Buck <trentbuck@gmail.com>
  * Stephane Chazelas <stephane_chazelas@yahoo.fr>
  * Thomas Dickey <tom@invisible-island.net>
  * Christian Ebert <blacktrash@gmx.net>
  * Geraint Edwards <gedge-lists-screen@yadn.org>
  * Romain Francoise <romain@orebokech.com>
  * Emanuele Giaquinta <e.giaquinta@glauco.it>
  * Steve Kemp <steve@steve.org.uk>