@@ -3336,6 +3336,8 @@ month number
 month name
 .IP n
 window number
+.IP P
+sets %? to true if the current region is in copy/paste mode
 .IP S
 session name
 .IP s
