@@ -5193,6 +5193,8 @@ month number
 month name
 @item n
 window number
+@item P
+sets %? to true if the current region is in copy/paste mode
 @item s
 seconds
 @item S
